Footer align fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,20 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
     background-image: url("https://www.anglophotography.co.uk/wp-content/uploads/2016/03/material-design-background.gif");
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #343a40;
+    color: white;
 }
 
 input {
@@ -10,11 +25,6 @@ input {
     background-color: #eceeef;
     box-shadow: 9px 9px 7px #08080833;
     border-radius: 0px;
-}
-
-.footer-color {
-    background-color: #343a40;
-    color: white;
 }
 
 a {
